--- a/WeekPicker/src/app/week-picker/week-picker.component.html
+++ b/WeekPicker/src/app/week-picker/week-picker.component.html
@@ -2,7 +2,7 @@
 <div class="">
   <p class="">
     This is an Angular Material Week Picker ,<br>
-    where you can select a Start Year and you will Get the Lists of Week 
+    where you can select a Start Year and you will Get the Lists of Weeks 
     from then till current date.
   </p>
 </div>
@@ -38,6 +38,4 @@ Make this more efficeint Fork this Library and use.
   </p>
 </div>
 
-<p class="">
- Can be used with angular version ^6.0.8
-  </p>
+
