--- a/WeekPicker/src/app/app.component.html
+++ b/WeekPicker/src/app/app.component.html
@@ -4,5 +4,10 @@
 </p>
 <br>
 <div style="text-align:right;">
-<p> Developer's Github Profile:<a href="https://github.com/rohitmishra98"  target="_blank" class=""> Rohit Mishra</a></p>
+<p> Developer's Profile:<a href="https://github.com/rohitmishra98"  target="_blank" class=""> Rohit Mishra</a></p>
+<span>
+  All Repositories
+  Simple Crud App <a>https://rohitmishra98.github.io/mini crud app/dist/index.html</a>
+  Angular V6 Material Week Picker <a>https://rohitmishra98.github.io/WeekPicker/dist/index.html</a>
+</span>
 </div>
