--- a/WeekPicker/src/app/app.component.html
+++ b/WeekPicker/src/app/app.component.html
@@ -5,9 +5,9 @@
 <br>
 <div style="text-align:right;">
 <p> Developer's Profile:<a href="https://github.com/rohitmishra98"  target="_blank" class=""> Rohit Mishra</a></p>
-<span>
-  All Repositories:<br>
-  Simple Crud App <a>https://rohitmishra98.github.io/mini crud app/dist/index.html</a><br>
-  Angular V6 Material Week Picker <a>https://rohitmishra98.github.io/WeekPicker/dist/index.html</a><br>
-</span>
+<div>
+  <p>All Repositories:</p><br>
+  <a href="https://rohitmishra98.github.io/mini crud app/dist/index.html" target="_blank"> Simple Crud App </a><br>
+  <a  href="https://rohitmishra98.github.io/WeekPicker/dist/index.html" target="_blank"> Angular V6 Material Week Picker </a><br>
+  </div>
 </div>
